--- a/index.html
+++ b/index.html
@@ -20,6 +20,19 @@
 
     </div>
 
+    <div class="section">
+        <div class="lado1">
+            <p>Lorem ipsum dolor sit amet.
+            </p>
+            <div class="foto">
+
+            </div>
+        </div>
+        <div class="lado2">
+
+        </div>
+    </div>
+
 </body>
 
 </html>
